# MVT.cpp

./: README.md
mnn/: CMakeLists.txt  README.md  README_mnn.md  main.cpp  mvt.cpp
mnn/include/: mvt.h
onnxruntime/: CMakeLists.txt  README.md  main.cpp  mvt.cpp  mvt_onnxruntime_demo.py  utils.py
onnxruntime/include/: mvt.h
